--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 				<button class="btn" id="btn4">Спорт. инвентарь</button>
 			</div>
 			<div class="item">
-				<img src="cron2.png" alt="kitche" class="img">
+				<img src="cron7.jpeg" alt="kitche" class="img">
 				<button class="btn" id="btn5">Кухня</button>
 			</div>
 					<div class="item">
-				<img src="cron2.png" alt="klaster" class="img">
+				<img src="cron5.jpeg" alt="klaster" class="img">
 				<button class="btn" id="btn6">Кластер</button>
 		</div>
 
